Sovrascritto fuori e dentro interna

--- a/variable_scope_js.html
+++ b/variable_scope_js.html
@@ -20,7 +20,9 @@
             console.log("il valore di fuori è ",fuori);
 
             function funzioneDentroInterna() {
-                
+                const fuori = 1000
+                const dentroInterna = 2000
+
                 console.log("il valore di dentroInterna è ",dentroInterna);
                 console.log("il valore di fuori dentro funzioneInterna è ",fuori);
                 
