--- a/variable_scope_js.html
+++ b/variable_scope_js.html
@@ -20,8 +20,8 @@
             console.log("il valore di fuori è ",fuori);
 
             function funzioneDentroInterna() {
-                const fuori = 1000
-                const dentroInterna = 2000
+                // const fuori = 1000
+                // const dentroInterna = 2000
 
                 console.log("il valore di dentroInterna è ",dentroInterna);
                 console.log("il valore di fuori dentro funzioneInterna è ",fuori);
@@ -30,9 +30,8 @@
 
             funzioneDentroInterna()            
         }
-
-
         funzioneInterna();
+        console.log(dentroInterna)
     </script>
 </body>
 </html>
