--- a/contesto_di_esecuzione_di_let.html
+++ b/contesto_di_esecuzione_di_let.html
@@ -27,7 +27,7 @@
         console.log(element);
         // questo console.log da errore perchè k smette di esistere fuori
         // dal contesto di blocco (block scope) del ciclo.
-        console.log(k);
+        //console.log(k);
        
         
 
