--- a/ES6/contatore/index.html
+++ b/ES6/contatore/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,13 @@
 </head>
 <body>
    
+    <div class="counter">
+        <button class="btn-less">-</button>
+        <span class="display">0</span>
+        <button class="btn-add">+</button>
+    </div>
+
+
     <script type="module" src="class/CounterSpec.js"></script>
 </body>
 </html>
