--- a/ES6/contatore/index.html
+++ b/ES6/contatore/index.html
@@ -8,12 +8,23 @@
 </head>
 <body>
    
-    <div class="counter">
+    <div id="counterA">
+        <div class="name">Contatore A</div>
         <button class="btn-less">-</button>
         <span class="display">0</span>
         <button class="btn-add">+</button>
     </div>
 
+    <div id="counterB">
+        <div class="name">contatore B</div>
+        <button class="btn-less">-</button>
+        <span class="display">0</span>
+        <button class="btn-add">+</button>
+    </div>
+    
+<script>
+    //console.log("pagina",this)
+</script>
 
     <script type="module" src="class/CounterSpec.js"></script>
 </body>
