Contatore con dataset e data-*

--- a/ES6/contatore/index.html
+++ b/ES6/contatore/index.html
@@ -7,25 +7,21 @@
     <title>Contatore</title>
 </head>
 <body>
-   
-    <div id="counterA">
-        <div class="name">Contatore A</div>
-        <button class="btn-less">-</button>
-        <span class="display">0</span>
-        <button class="btn-add">+</button>
+    <div id="counterC"    
+         data-title=" da 10 a 20 partendo da 15"
+         data-min="10"
+         data-max="20"
+         data-initial="15"
+         >
     </div>
 
-    <div id="counterB">
-        <div class="name">contatore B</div>
-        <button class="btn-less">-</button>
-        <span class="display">0</span>
-        <button class="btn-add">+</button>
-    </div>
-    
+    <div id="counterD"></div>
+
+    <div id="counterE" data-title="da -10 partendo da 0 (default)" data-min="-10"  ></div>
 <script>
     //console.log("pagina",this)
 </script>
 
-    <script type="module" src="class/CounterSpec.js"></script>
+    <script type="module" src="class/CounterElementSpec.js"></script>
 </body>
 </html>
